@@ -1,3 +1,10 @@
+Sun Feb 14 04:37:22 UTC 2010  Steven Stallion  <stallions@ociweb.com>
+
+        * tools/odds_dissector/odds_dissector.cpp:
+
+          Renamed Message ID and Sub-Message ID fields to ID and Sub-ID,
+          respectively.
+
 Sun Feb 14 03:00:23 UTC 2010  Steven Stallion  <stallions@ociweb.com>
 
         * tools/odds_dissector/odds_dissector.cpp:
